--- a/introToBoxModel.html
+++ b/introToBoxModel.html
@@ -3,7 +3,8 @@
 <head>
 <title>Intro To The Box Model</title>
 <meta charset="utf-8" />
-
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
 <body>
 <section id="noteondivandsection">
